--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,4 @@
-export K3s_VERSION=v1.24.9+k3s2
+export K3S_VERSION=v1.24.4-k3s1
 export GITOPS_HOME="$PWD"
 export KUBECONFIG="$PWD/.kube/config"
 export GITEA_DOMAIN="gitea-127.0.0.1.sslip.io"
@@ -18,7 +18,7 @@ export DOLLAR='$'
 
 export GITEA_USER=user-01
 export GITEA_USER_PASSWORD=user-01@123
-export GITEA_GITOPS_CORE_REPO="${GITEA_URL}/${GITEA_USER}/gitops-with-k3s.git"
+export GITEA_GITOPS_CORE_REPO="${GITEA_URL}/${GITEA_USER}/gitops-on-k3s.git"
 export GITEA_GITOPS_CORE_REPO_VERSION=main
 
 export DRONE_SERVER="${DRONE_SERVER_URL}"
