--- a/apps/Chart.yaml
+++ b/apps/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: gitops-with-k3s
+name: gitops-on-k3s
 description: GitOps quickstart with ArgoCD, Drone on k3s
 
 # A chart can be either an 'application' or a 'library' chart.
